--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 on: push
 
+env:
+  LIB_NAME: matrix_lib
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,7 +29,7 @@ jobs:
       - run: make test
       - name: Test coverage
         run: |
-          cd build && lcov -t "tests_fib" -o coverage.info -c -d fib_lib/CMakeFiles
+          cd build && lcov -t "tests_matrix" -o coverage.info -c -d env.LIB_NAME/CMakeFiles
           genhtml -o report coverage.info
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
