--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - run: make test
       - name: Test coverage
         run: |
-          cd build && lcov -t "tests_matrix" -o coverage.info -c -d env.LIB_NAME/CMakeFiles
+          cd build && lcov -t "tests_matrix" -o coverage.info -c -d ${LIB_NAME}/CMakeFiles
           genhtml -o report coverage.info
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
