fix test coverage in ci 4

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: executable_file
-        path: build/fib
+        path: build/${EXE_FILE}
   test:
     runs-on: ubuntu-latest
     container: leshiy1295/gcc_linters_valgrind_cmake_gtest
