--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,22 +28,22 @@ jobs:
       - run: make build TEST_OPT=ON
       - run: make run
       - run: make test
-      # - name: GO TEST COVERAGE
-      #   run: make coverage
-      # - name: Upload artifacts (COVERAGE REPORT) 
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: coverage-report
-      #     path: build/report
-      # - name: GO VALGRIND TESTS
-      #   run: make valgrind_tests  
-      # - name: GO VALGRIND TARGET
-      #   run: make valgrind_target  
-      # - name: GO SANITIZER
-      #   run: |
-      #     make build SANITIZE_OPT=ON
-      #     make run
-      # - name: GO SCAN-BUILD
-      #   run: |
-      #     make build
-      #     make scan_build
+      - name: GO TEST COVERAGE
+        run: make coverage
+      - name: Upload artifacts (COVERAGE REPORT) 
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage-report
+          path: build/report
+      - name: GO VALGRIND TESTS
+        run: make valgrind_tests  
+      - name: GO VALGRIND TARGET
+        run: make valgrind_target  
+      - name: GO SANITIZER
+        run: |
+          make build SANITIZE_OPT=ON
+          make run
+      - name: GO SCAN-BUILD
+        run: |
+          make build
+          make scan_build
