--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,13 +28,14 @@ jobs:
       - run: make build TEST_OPT=ON
       - run: make run
       - run: make test
-      - name: GO TEST COVERAGE
-        run: make coverage
-      - name: Upload artifacts (COVERAGE REPORT) 
-        uses: actions/upload-artifact@v2
-        with:
-          name: coverage-report
-          path: build/report
+      # *** НЕТ CPP для тестирования *** 
+      # - name: GO TEST COVERAGE
+      #   run: make coverage
+      # - name: Upload artifacts (COVERAGE REPORT) 
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: coverage-report
+      #     path: build/report
       - name: GO VALGRIND TESTS
         run: make valgrind_tests  
       - name: GO VALGRIND TARGET
